# raikiri-hello-world

./: .gitignore  Cargo.toml  README.md  raikiri.yaml  request.json  test.sh
src/: bindings.rs  lib.rs
