[package]
name = "raikiri-hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
wai-bindgen-rust = "0.2"
raikiri-bindings = { git = "https://github.com/viniciusfonseca/raikiri-bindings.git" } 

[lib]
crate-type = ["cdylib"]